2022-01-28  Julien Bect  <julien.bect@centralesupelec.fr>

	Remove the MOLE from the Octave package entirely

	* stk_init.m: Update comments.
	* admin/octpkg/patches/stk-init-mole-cleanup.patch: Rename from.
	* admin/octpkg/patches/stk-init-mole-delete.patch: Rename to.
	Delete everything related to the MOLE inside stk_init.
	* admin/octpkg/patches/series: Refresh.
	* admin/octpkg/post_install.m: Delete (no longer needed).
	* admin/build_tools/build_octpkg.m: Refresh.

	Raise required Octave version number to 4.0.0

	* README.md: Raise required Octave version number to 4.0.0.
	* admin/build_tools/build_octpkg.m: Iem.
	* admin/CODING_GUIDELINES: Update.
	* arrays/@stk_hrect/stk_hrect.m: Refer to CG#08.
	* misc/test/stk_runtests.m: Remove reference to 3.8.2.

	Avoid using isrow

	* admin/CODING_GUIDELINES: Explain why.
	* misc/mole/isrow/isrow.m: Delete.
	* stk_init.m: isrow removed from the MOLE.
	* misc/mole/README: Minor update.
	* admin/octpkg/patches/stk-init-mole-cleanup.patch: Refresh patch.
	* arrays/@stk_dataframe/plot.m: Don't use isrow.
	* misc/pareto/stk_dominatedhv.m: Don't use isrow.

2022-01-26  Julien Bect  <julien.bect@centralesupelec.fr>

	MOLE: linsolve is no longer needed

	* misc/mole/linsolve/linsolve.m: Deleted.
	* admin/octpkg/patches/stk-init-mole-cleanup.patch: Refresh patch.
	* misc/mole/README: Remove linsolve.
	* stk_init.m: Remove linsolve.

	build: Fix path issue

	* admin/build.m: Do not add root dir to the path.
	* admin/build_tools/check_index_file.m: Remove unused portion.
	* admin/build_tools/get_public_mfile_list.m: Take extra precautions.
	* admin/build_tools/get_version_number.m: Add root dir to the path.

	build: Makefile: Remove reference to Mercurial

	* Makefile: Remove reference to Mercurial

	build: New patch for stk_init

	* admin/octpkg/patches/stk-init-mole-cleanup.patch: New patch to
	trim some Matlab-related things out of stk_init.
	* admin/octpkg/patches/series: Add the patch to the series.
